Add/Remove BuildingElement to Building
Add/Remove methods have to be developed further to accomodate building changes (dealing with BuilingElementProperties, Levels etc.)

--- a/Environment_Engine/Environment_Engine.csproj
+++ b/Environment_Engine/Environment_Engine.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Query\Level.cs" />
     <Compile Include="Query\Bounds.cs" />
     <Compile Include="Query\EquipmentProprerties.cs" />
+    <Compile Include="Modify\RemoveBuildingElement.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Structure_Engine\Structure_Engine.csproj">
